@@ -1,5 +1,8 @@
 2012-11-29  Doug Evans  <dje@google.com>
 
+	* testsuite-management/validate_failures.py: Rename variable
+	manifest_name to manifest_path everywhere.
+
 	* testsuite-management/validate_failures.py (CompareBuilds): Pass
 	options.results to GetSumFiles for clean build.
 
